# mowglinext

./: .gitignore  .gitmodules  CLAUDE.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: auto-label.yml  claude-code-review.yml  claude-review.yml  firmware-ci.yml  gui-docker.yml  ros2-ci.yml  ros2-docker.yml  sensors-gps.yml  sensors-lidar-ldlidar.yml  sensors-lidar-rplidar.yml  sensors-lidar-stl27l.yml  sensors-nmea.yml  sensors-unicore.yml  wiki-update.yml
docker/: .env.example  stack.sh
docker/logs/: motion_test.py  yaw_compare.py
docs/: IMPORT_OPENMOWER_MAP.md  RESEARCH_obstacle_coverage.md  index.html  install.sh  test_web_composer.sh  unicore_live_validate.md  unicore_profiles.md
gui/: generate_go_msgs.sh  generate_ts_types.sh
gui/asserts/: mower_config.schema.json
gui/web/: index.html  package.json  vite.config.ts
install/: mowglinext.sh  test_mowglinext.sh
install/compose/: docker-compose.gps.yml  docker-compose.unicore.yaml
install/lib/: banner.sh  checks.sh  compose.sh  config.local.sh.example  config.sh  deploy.sh  docker.sh  env.sh  gps.sh  state.sh  udev.sh  unicore_config.sh
install/tests/: test_check_mode.sh  test_config_dir_squat.sh  test_env_output.sh  test_gps_matrix.sh  test_hardware_presets.sh  test_state_parsing.sh  test_ublox_runtime.sh  test_udev_install.sh  (+1 more)
ros2/: Dockerfile  Makefile  README.md
ros2/src/fusion_graph/: CMakeLists.txt
ros2/src/fusion_graph/config/: fusion_graph.yaml
ros2/src/fusion_graph/include/fusion_graph/: fusion_graph_node.hpp  graph_manager.hpp
ros2/src/fusion_graph/launch/: fusion_graph.launch.py
ros2/src/fusion_graph/src/: fusion_graph_node.cpp  graph_manager.cpp
ros2/src/fusion_graph/test/: test_adaptive_noise.cpp  test_graph_window.cpp  test_loop_closure_robust.cpp  test_persistence.cpp  test_slip_pivot.cpp  test_stationary_yaw.cpp
ros2/src/mowgli_behavior/: CMakeLists.txt  package.xml
ros2/src/mowgli_behavior/include/mowgli_behavior/: bt_context.hpp  condition_nodes.hpp  coverage_nodes.hpp  navigation_nodes.hpp  status_nodes.hpp
ros2/src/mowgli_behavior/src/: behavior_tree_node.cpp  condition_nodes.cpp  coverage_nodes.cpp  docking_nodes.cpp  navigation_nodes.cpp  register_nodes.cpp  status_nodes.cpp
ros2/src/mowgli_behavior/test/: test_obstacle_recovery.cpp
ros2/src/mowgli_behavior/trees/: main_tree.xml  navigate_to_pose.xml
ros2/src/mowgli_bringup/: CMakeLists.txt  package.xml
ros2/src/mowgli_bringup/config/: hardware_bridge.yaml  mowgli_robot.yaml  nav2_params.yaml  nav2_params_no_lidar.yaml  robot_localization.yaml  ublox_gnss.yaml
ros2/src/mowgli_bringup/launch/: full_system.launch.py  mowgli.launch.py  nav2_navigation_launch.py  navigation.launch.py  sim_full_system.launch.py  ublox_gnss.launch.py
ros2/src/mowgli_bringup/test/: test_nav2_params.py
ros2/src/mowgli_bringup/urdf/: mowgli.urdf.xacro
ros2/src/mowgli_coverage/: CMakeLists.txt  package.xml
ros2/src/mowgli_coverage/include/mowgli_coverage/: coverage_server.hpp
ros2/src/mowgli_coverage/src/: coverage_server.cpp  main.cpp
ros2/src/mowgli_hardware/: CMakeLists.txt
ros2/src/mowgli_hardware/include/mowgli_hardware/: angular_rate_controller.hpp  ll_datatypes.hpp  wz_pulse_modulator.hpp
ros2/src/mowgli_hardware/src/: hardware_bridge_node.cpp
ros2/src/mowgli_hardware/test/: test_angular_rate_controller.cpp  test_protocol.cpp  test_wz_pulse_modulator.cpp
ros2/src/mowgli_interfaces/: CMakeLists.txt  package.xml
ros2/src/mowgli_interfaces/msg/: GnssStatus.msg
ros2/src/mowgli_interfaces/srv/: GetNextSegment.srv  GetRemainingAreaPolygon.srv  MarkSegmentBlocked.srv  PromoteObstacle.srv  SetDockingPoint.srv
ros2/src/mowgli_localization/: CMakeLists.txt  package.xml
ros2/src/mowgli_localization/include/mowgli_localization/: cog_yaw_math.hpp  gnss_runtime_state.hpp  gnss_runtime_state_builder.hpp  gnss_status_adapter.hpp  localization_monitor_node.hpp  navsat_to_absolute_pose_node.hpp
ros2/src/mowgli_localization/src/: calibrate_imu_yaw_node.cpp  cog_to_imu_node.cpp  costmap_scan_filter_node.cpp  dock_yaw_to_set_pose_node.cpp  gnss_runtime_state_builder.cpp  gnss_status_adapter.cpp  localization_monitor_node.cpp  navsat_to_absolute_pose_node.cpp  scan_deskew_node.cpp
ros2/src/mowgli_localization/test/: test_cog_yaw_math.cpp  test_costmap_scan_filter.cpp  test_gnss_runtime_state_builder.cpp  test_gnss_status_adapter.cpp
ros2/src/mowgli_map/: CMakeLists.txt  package.xml
ros2/src/mowgli_map/config/: map_server.yaml  map_server_obstacle_test.yaml  map_server_small_garden.yaml  obstacle_tracker.yaml
ros2/src/mowgli_map/include/mowgli_map/: internal_helpers.hpp  map_server_node.hpp  map_types.hpp
ros2/src/mowgli_map/src/: area_manager.cpp  costmap_filters.cpp  coverage_planner.cpp  map_server_node.cpp  progress_tracker.cpp  remaining_polygon.cpp
ros2/src/mowgli_map/test/: test_map_server.cpp
ros2/src/mowgli_nav2_plugins/: CMakeLists.txt  goal_checker_plugin.xml  package.xml
ros2/src/mowgli_nav2_plugins/include/mowgli_nav2_plugins/: ftc_controller.hpp  obstacle_deviation.hpp  path_progress_goal_checker.hpp
ros2/src/mowgli_nav2_plugins/src/: ftc_controller.cpp  obstacle_deviation.cpp  path_progress_goal_checker.cpp
ros2/src/mowgli_nav2_plugins/test/: test_obstacle_deviation.cpp
ros2/src/mowgli_simulation/: CMakeLists.txt  package.xml
ros2/src/mowgli_simulation/config_webots/: ros2_control.yaml
ros2/src/mowgli_simulation/launch/: webots_minimal.launch.py
ros2/src/mowgli_simulation/mowgli_simulation/: __init__.py  kinematic_drive.py
ros2/src/mowgli_simulation/protos/: MowgliMower.proto
ros2/src/mowgli_simulation/scripts/: sim_imu_noise.py  sim_wheel_slip.py
ros2/src/mowgli_simulation/src/: fake_hardware_bridge_node.cpp
ros2/src/mowgli_simulation/urdf_webots/: mowgli_webots.urdf
ros2/src/mowgli_simulation/worlds_webots/: mowgli_garden.wbt
sensors/: README.md
wiki/: AI-Assisted-Contributing.md  Architecture.md  Behavior-Trees.md  Configuration.md  Firmware.md  Getting-Started.md  Home.md  Sensors.md  Simulation.md  User-Guide.md
(+138 files in other folders)
