<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mowgli_bringup</name>
  <version>0.1.0</version>
  <description>
    Launch files, parameter configurations, and URDF/xacro for the Mowgli
    autonomous robot mower. Provides bringup for hardware, navigation stack
    (Nav2 + robot_localization dual EKF), and the Webots simulation stack.
  </description>
  <maintainer email="cedric@example.com">Cedric</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies – launch and description infrastructure -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Navigation stack -->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_regulated_pure_pursuit_controller</exec_depend>
  <exec_depend>nav2_smac_planner</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>
  <exec_depend>opennav_coverage</exec_depend>

  <!-- Localization -->
  <exec_depend>robot_localization</exec_depend>
  <!-- slam_toolbox was the RTK-fallback LiDAR localizer; removed in
       favor of fusion_graph (planned) — see docs/HANDOFF_FUSION_GRAPH.md.
       Kinematic-ICP source under ros2/src/kinematic_icp is retained for
       revertability but the launch + helper scripts are gone. -->

  <!-- LiDAR-aware localization is provided by fusion_graph (opt-in via
       use_fusion_graph). -->

  <!-- Velocity multiplexing -->
  <exec_depend>twist_mux</exec_depend>

  <!-- Mowgli packages -->
  <exec_depend>mowgli_hardware</exec_depend>
  <exec_depend>mowgli_interfaces</exec_depend>
  <exec_depend>mowgli_behavior</exec_depend>
  <exec_depend>mowgli_map</exec_depend>
  <exec_depend>mowgli_localization</exec_depend>
  <exec_depend>mowgli_monitoring</exec_depend>

  <!-- GUI bridge (optional at runtime, declared for rosdep resolution) -->
  <exec_depend>foxglove_bridge</exec_depend>

  <!-- Integration test dependencies -->
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-yaml</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
