<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mowgli_interfaces</name>
  <version>0.1.0</version>
  <description>
    ROS2 message, service, and action definitions for the Mowgli autonomous lawn mower.
    Provides interfaces for mower status, emergency handling, power management,
    ESC control, high-level state, GNSS runtime state, absolute pose, wheel odometry, map areas,
    coverage paths, and IMU data.
  </description>
  <maintainer email="cedric@example.com">Cedric</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
