<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mowgli_localization</name>
  <version>0.1.0</version>
  <description>
    Localization helper nodes for the Mowgli robot mower: wheel odometry
    integration, GPS conversion (NavSatFix → AbsolutePose and PoseWithCovarianceStamped),
    COG-to-IMU absolute-yaw publisher, magnetometer yaw publisher (with
    autonomous calibration via calibrate_imu_yaw_node), dock-yaw
    auto-capture, and a localization quality monitor. All nodes are
    implemented in C++. The odom→base_footprint and map→odom TFs are
    published by the stock robot_localization EKF nodes.
  </description>
  <maintainer email="cedric@mowgli.dev">Cedric</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>mowgli_interfaces</depend>
  <depend>yaml-cpp</depend>

  <!-- robot_localization (ekf_node, navsat_transform_node) is launched by
       mowgli_bringup and not compiled against here. -->

  <!-- Python runtime deps for calibrate_imu_yaw_node.py, cog_to_imu.py,
       dock_yaw_to_set_pose.py, and mag_yaw_publisher.py.
       sensor_msgs / nav_msgs / mowgli_interfaces are already declared
       as build+exec via <depend> above. -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
